--- a/main.html
+++ b/main.html
@@ -8,6 +8,47 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="name">name:</label>
+		<input id="name" type="text" name="name" required><br>
+		
+		<label for="email">email:</label>
+		<input id="email" type="email" name="email" required><br>
+
+		<label for="gender">Gender:</label>
+		<input id="gender" type="radio" value="male">Male
+		<input id="gender" type="radio" value="female">Female
+		<br>
+		<label for="lps">laptop:</label>
+		<select name="lps" id="lps" >
+			<option value="Apple">Apple</option>
+			<option value="Asus">Asus</option>
+			<option value="HP">HP</option>
+		</select>
+
+		<br>
+
+		<label for="age">age:</label>
+		<input id="age" type="number" name="age" required>
+		<br>
+		
+		<label for="date">dob:</label>
+		<input id="date" type="date" name="date" required>
+		<br>
+
+		<label for="psw">password:</label>
+		<input id="psw" type="password" name="password" required>
+		<br>
+
+		<label for="url">Portfolio:</label>
+		<input id="url" type="url" name="url" >
+		<br>
+
+		<button>Submit</button>
+
+		
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
