--- a/main.html
+++ b/main.html
@@ -15,9 +15,10 @@
 		<label for="email">email:</label>
 		<input id="email" type="email" name="email" required><br>
 
-		<label for="gender">Gender:</label>
-		<input id="gender" type="radio" value="male">Male
-		<input id="gender" type="radio" value="female">Female
+		<label for="male">Male:</label>
+			<input id="male" type="radio" name="gender" value="male">
+		<label for="female">Female:</label>
+			<input id="female" type="radio" name="gender" value="female">
 		<br>
 		<label for="lps">laptop:</label>
 		<select name="lps" id="lps" >
@@ -32,16 +33,16 @@
 		<input id="age" type="number" name="age" required>
 		<br>
 		
-		<label for="date">dob:</label>
-		<input id="date" type="date" name="date" required>
+		<label for="dob">dob:</label>
+		<input id="dob" type="date" name="date" required>
 		<br>
 
 		<label for="psw">password:</label>
 		<input id="psw" type="password" name="password" required>
 		<br>
 
-		<label for="url">Portfolio:</label>
-		<input id="url" type="url" name="url" >
+		<label for="portfolio">portfolio:</label>
+		<input id="portfolio" type="url" name="portfolio" >
 		<br>
 
 		<button>Submit</button>
