--- a/main.html
+++ b/main.html
@@ -37,8 +37,8 @@
 		<input id="dob" type="date" name="date" required>
 		<br>
 
-		<label for="psw">password:</label>
-		<input id="psw" type="password" name="password" required>
+		<label for="password">password:</label>
+		<input id="password" type="password" name="password" required>
 		<br>
 
 		<label for="portfolio">portfolio:</label>
