--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
 		<br>
 		
 		<label for="dob">dob:</label>
-		<input id="dob" type="date" name="date" required>
+		<input id="dob" type="date" name="dob" required>
 		<br>
 
 		<label for="password">password:</label>
