--- a/main.html
+++ b/main.html
@@ -16,12 +16,12 @@
 		<input id="email" type="email" name="email" required><br>
 
 		<label for="male">Male:</label>
-			<input id="male" type="radio" name="gender" value="male">
+			<input id="male" type="radio" name="gender" value="male" required>
 		<label for="female">Female:</label>
-			<input id="female" type="radio" name="gender" value="female">
+			<input id="female" type="radio" name="gender" value="female" required>
 		<br>
-		<label for="lps">laptop:</label>
-		<select name="lps" id="lps" >
+		<label for="laptop">laptop:</label>
+		<select name="laptop" id="laptop" >
 			<option value="Apple">Apple</option>
 			<option value="Asus">Asus</option>
 			<option value="HP">HP</option>
