--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@
 		<input id="portfolio" type="url" name="portfolio" >
 		<br>
 
-		<button>Submit</button>
+		<button type="submit">Submit</button>
 
 		
 		
